--- a/_modules/index.html
+++ b/_modules/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Overview: module code &#8212; Thetis 0+untagged.1795.gcdcd32d documentation</title>
+    <title>Overview: module code &#8212; Thetis 0+untagged.1891.g4528d31 documentation</title>
     <link rel="stylesheet" type="text/css" href="../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../_static/thetis.css" />
     <script data-url_root="../" id="documentation_options" src="../_static/documentation_options.js"></script>
@@ -66,7 +66,9 @@
 <li><a href="thetis/forcing.html">thetis.forcing</a></li>
 <li><a href="thetis/implicitexplicit.html">thetis.implicitexplicit</a></li>
 <li><a href="thetis/interpolation.html">thetis.interpolation</a></li>
+<li><a href="thetis/inversion_tools.html">thetis.inversion_tools</a></li>
 <li><a href="thetis/limiter.html">thetis.limiter</a></li>
+<li><a href="thetis/log.html">thetis.log</a></li>
 <li><a href="thetis/momentum_eq.html">thetis.momentum_eq</a></li>
 <li><a href="thetis/optimisation.html">thetis.optimisation</a></li>
 <li><a href="thetis/options.html">thetis.options</a></li>
@@ -95,7 +97,7 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2021, Tuomas Kärnä et al..
+        &#169; Copyright 2016-2022, Tuomas Kärnä et al..
       Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.3.2.
     </div>
   </body>
