--- a/_modules/thetis/configuration.html
+++ b/_modules/thetis/configuration.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.configuration &#8212; Thetis 0+untagged.1795.gcdcd32d documentation</title>
+    <title>thetis.configuration &#8212; Thetis 0+untagged.1878.g52658ff.dirty documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
     <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
@@ -337,6 +337,7 @@
 <span class="sd">    definition or when  self._isfrozen is False.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">_isfrozen</span> <span class="o">=</span> <span class="kc">False</span>
+    <span class="n">_unfreezedepth</span> <span class="o">=</span> <span class="mi">0</span>
 
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
         <span class="nb">super</span><span class="p">(</span><span class="n">FrozenHasTraits</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
@@ -354,6 +355,7 @@
 <span class="sd">    definition or when  self._isfrozen is False.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">__metaclass__</span> <span class="o">=</span> <span class="n">ABCMetaHasTraits</span>
+    <span class="n">_unfreezedepth</span> <span class="o">=</span> <span class="mi">0</span>
 
     <span class="n">_isfrozen</span> <span class="o">=</span> <span class="kc">False</span>
 
@@ -412,7 +414,7 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2021, Tuomas Kärnä et al..
+        &#169; Copyright 2016-2022, Tuomas Kärnä et al..
       Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.3.2.
     </div>
   </body>
