--- a/_modules/index.html
+++ b/_modules/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Overview: module code &#8212; Thetis 0+untagged.1891.g4528d31 documentation</title>
+    <title>Overview: module code &#8212; Thetis 0+untagged.1922.g02d08b3 documentation</title>
     <link rel="stylesheet" type="text/css" href="../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../_static/thetis.css" />
     <script data-url_root="../" id="documentation_options" src="../_static/documentation_options.js"></script>
@@ -55,7 +55,6 @@
 <li><a href="thetis/assembledschur.html">thetis.assembledschur</a></li>
 <li><a href="thetis/callback.html">thetis.callback</a></li>
 <li><a href="thetis/configuration.html">thetis.configuration</a></li>
-<li><a href="thetis/conservative_tracer_eq_2d.html">thetis.conservative_tracer_eq_2d</a></li>
 <li><a href="thetis/coordsys.html">thetis.coordsys</a></li>
 <li><a href="thetis/coupled_timeintegrator.html">thetis.coupled_timeintegrator</a></li>
 <li><a href="thetis/coupled_timeintegrator_2d.html">thetis.coupled_timeintegrator_2d</a></li>
@@ -98,7 +97,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2022, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.3.2.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.2.0.
     </div>
   </body>
 </html>
